--- a/index.html
+++ b/index.html
@@ -248,27 +248,6 @@
                   </div>
                 </div>
               </div>
-              <!-- single portfolio -->
-            </div>
-            <div class="col-lg-4 col-sm-6 completed-4">
-              <div class="single-portfolio">
-                <div class="portfolio-image">
-                  <img src="assets/images/portfolio/2.png" alt="">
-                  <div class="portfolio-overlay d-flex align-items-center justify-content-center">
-                    <div class="portfolio-content">
-                      <div class="portfolio-icon">
-                        <a class="image-popup" href="assets/images/portfolio/2.png"><i class="lni lni-zoom-in"></i></a>
-                        <img src="assets/images/portfolio/shape.svg" alt="shape" class="shape">
-                      </div>
-                      <div class="portfolio-icon">
-                        <a href="https://coincube.io/" target="_blank"><i class="lni lni-link"></i></a>
-                        <img src="assets/images/portfolio/shape.svg" alt="shape" class="shape">
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <!-- single portfolio -->
             </div>
             <div class="col-lg-4 col-sm-6 completed-4">
               <div class="single-portfolio">
@@ -288,7 +267,6 @@
                   </div>
                 </div>
               </div>
-              <!-- single portfolio -->
             </div>
             <div class="col-lg-4 col-sm-6 development-4">
               <div class="single-portfolio">
@@ -301,14 +279,13 @@
                         <img src="assets/images/portfolio/shape.svg" alt="shape" class="shape">
                       </div>
                       <div class="portfolio-icon">
-                        <a href="https://tirith.io/dashboard" target="_blank"><i class="lni lni-link"></i></a>
+                        <a href="https://discreetlogcontract.tech/dashboard" target="_blank"><i class="lni lni-link"></i></a>
                         <img src="assets/images/portfolio/shape.svg" alt="shape" class="shape">
                       </div>
                     </div>
                   </div>
                 </div>
               </div>
-              <!-- single portfolio -->
             </div>
             <div class="col-lg-4 col-sm-6 development-4">
               <div class="single-portfolio">
@@ -328,7 +305,6 @@
                   </div>
                 </div>
               </div>
-              <!-- single portfolio -->
             </div>
           </div>
           <!-- row -->
